# claude-code-projects

./: .cursorignore  .gitignore  AGENTS.locale.md  AGENTS.md  CLAUDE.locale.md  CLAUDE.md  README.md  todolist.locale.md  todolist.md
.agent/rules/: _cli.md  _project.md  _uicontrol.md
.ai/: GLOBAL.locale.md
.ai/locale/: AGENTS.locale.md
.ai/meta/: example-schema.dtd
.ai/sa/: translate.locale.md
.ai/user/: USER_AGENTS.locale.md
.claude/: settings.json
.claude/commands/: optimize-prompt.md  pe__clarify-error.md  pe__renew.md  translate.md
.codebuddy/.rules/: _cli.mdc  _project.mdc
.cursor/rules/: project.mdc
.docs/: CLAUDE.locale.md  CLAUDE.md
.docs/cmd/: optimize-prompt.locale.md  translate.locale.md
.docs/project/: PROJECT_TEMPLATE.locale.md
.docs/qa/: development-qa.md  qa.md
.docs/slashcommands/: translate.locale.md
.docs/user/: USER_AGENTS.locale.md  USER_AGENTS.md  USER_CLAUDE.locale.md  USER_CLAUDE.md
.factory/commands/: pe__translate.md
.jiumate_ai/user/: USER_AGENTS.locale.md
.kiro/steering/: _cli.md  _root.md  _uicontrol.md
.qoder/rules/: _uicontrol.md
__ai/: GLOBAL.locale.md
__ai/agents/: pe__translate.locale.md  todo__code-architect.locale.md
__aiissues/: translate 路径输出错误.md
cli/: .npmignore  AGENTS.md  CLAUDE.md  eslint.config.ts  package.json  tsconfig.json  tsconfig.tsdown.json  tsdown.config.ts
cli/rust/: Cargo.toml  rustfmt.toml
cli/rust/src/: lib.rs  napi.rs
cli/rust/src/modules/: config.rs  error.rs  mod.rs  orchestrator.rs  platform.rs  storage.rs  template.rs
docs/: CLAUDE-prompts.locale.md  CLAUDE.locale.md  SPEC-1-REQUIREMENTS.locale.md
hooks/: package.json
uicontrol/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
(+56 files in other folders)
